test-output.txt

> my-app@1.0.0 test
> jest components/traffic-map/traffic-map.test.tsx

FAIL components/traffic-map/traffic-map.test.tsx
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\Yago\WebstormProjects\expo-android-project-3\node_modules\supercluster\index.js:2
    import KDBush from 'kdbush';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      2 | import React, { useEffect, useRef } from 'react';
      3 | import { Animated, GestureResponderEvent, Image, PanResponder, PanResponderGestureState, Pressable, Text, View } from 'react-native';
    > 4 | import MapViewClustered from 'react-native-map-clustering';
        | ^
      5 | import MapView, { Marker, PROVIDER_GOOGLE } from 'react-native-maps';
      6 |
      7 | import { Cam } from '@/types/cam';

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.require (node_modules/react-native-map-clustering/lib/ClusteredMapView.js:11:1)
      at Object.require (node_modules/react-native-map-clustering/index.js:1:1)
      at Object.require (components/traffic-map/traffic-map.tsx:4:1)
      at Object.require (components/traffic-map/traffic-map.test.tsx:3:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.996 s
Ran all test suites matching /components\\traffic-map\\traffic-map.test.tsx/i.
